--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body { /* We can style any HTML element by using its name - here we're styling t
     /* We want text that uses a clean sans-serif font, is usually 16px big and close to black */
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 16px;
-    color: #773ac7;
+    color: #1b0e2b;
     line-height: 1.6;
     /* we want a white page, that's centered and not too wide */
     background-color: #fff;
@@ -20,7 +20,7 @@ body { /* We can style any HTML element by using its name - here we're styling t
   
   /* Headings */
   h1, h2, h3, h4, h5, h6 {
-    color: #7718cf;
+    color: #080708;
     margin-top: 24px;
     margin-bottom: 16px;
     font-weight: 600;
